Remove visible space for featured image. Fixes #273

--- a/css/fee.css
+++ b/css/fee.css
@@ -1,4 +1,4 @@
-br.fee-title
+br.fee-title,
 .fee-on .fee-link-pages {
 	display: none;
 }
